# EECS106A

./: CMakeLists.txt
devel/: .catkin  _setup_util.py  setup.sh
devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
devel/lib/ddynamic_reconfigure/: ddynamic_reconfigure_auto_update_test  fake_dynamic_reconfigure_server  test_bool_dynamic_reconfigure_server
devel/lib/pkgconfig/: ddynamic_reconfigure.pc  img_processor.pc  realsense2_camera.pc  realsense2_description.pc  ros_numpy.pc  segmentation.pc
devel/lib/python2.7/dist-packages/ros_numpy/: __init__.py
devel/share/ddynamic_reconfigure/cmake/: ddynamic_reconfigureConfig.cmake
devel/share/img_processor/cmake/: img_processorConfig.cmake
devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/ros_numpy/cmake/: ros_numpyConfig.cmake
devel/share/roseus/ros/realsense2_camera/: manifest.l
devel/share/segmentation/cmake/: segmentationConfig.cmake
src/: Equation Generator.ipynb
src/img_processor/: CMakeLists.txt  package.xml
src/img_processor/src/: example_sub.py  vision.py
src/segmentation/src/: ball_tracker.py  example_sub.py  image_depth_cassie_combo.py  image_segmentation.py  image_segmentation_Cassie.py  image_segmentation_JS.py  image_segmentation_cassie.py  location.py  udp_comm_cassie.cpp  udp_communicator.cpp
